--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -20,5 +21,9 @@
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime": "^7.15.4",
+    "axios": "^0.21.4",
+    "qs": "^6.10.1"
+  }
 }
